WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115778
Fix one more place that needed to use adoptCF/NS
https://bugs.webkit.org/show_bug.cgi?id=115778
Summary
Fix one more place that needed to use adoptCF/NS
Darin Adler
Reported
2013-05-08 00:41:30 PDT
Fix one more place that needed to use adoptCF/NS
Attachments
Patch
(10.93 KB, patch)
2013-05-08 00:42 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2013-05-08 00:42:47 PDT
Created
attachment 201037
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-08 02:40:25 PDT
Comment on
attachment 201037
[details]
Patch Clearing flags on attachment: 201037 Committed
r149725
: <
http://trac.webkit.org/changeset/149725
>
WebKit Commit Bot
Comment 3
2013-05-08 02:40:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug