Fix one more place that needed to use adoptCF/NS https://bugs.webkit.org/show_bug.cgi?id=115778

Reviewed by Benjamin Poulain.

Not sure why I missed this code last time, but found a bit more code that needs
to switch to the newer style adoptCF/NS.

* WebKitTestRunner/cf/WebArchiveDumpSupport.cpp:
(convertWebResourceDataToString): Use adoptCF.
(convertWebResourceResponseToDictionary): Ditto.
(createXMLStringFromWebArchiveData): Ditto.
* WebKitTestRunner/mac/WebArchiveDumpSupportMac.mm:
(createCFURLResponseFromResponseData): Use adoptNS and adoptCF.


Canonical link: https://commits.webkit.org/134186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149725 268f45cc-cd09-0410-ab3c-d52691b4dbfc